/*
 * $Id$
 */

2009-10-08 16:21 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  demos/dbExplorer/dbExplorer.prg
     * dont set minimun autocolumn size when calling AutoColumnSize

  *  src/common/wxhfuncs.prg
     ! Fixed bug when calling ::PickList twice due to event keeps propagated

  *  src/wxbase/events/wx_Event.cpp
  *  src/wxbase/events/wxhEvent.prg
     + implemented almost all method's, except:
       * m_propagationLevel
       * Clone()

2009-10-08 12:51 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/common/wxhfuncs.prg
     ! Fixed problem on updating a wxTextCtrl by pressing WXH_TAB key

2009-10-07 19:09 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/common/wxhfuncs.prg
     % extended capabilities for controls that deals with ITEMS (array/hash)
       to store retrieve either of numeric or string values

  *  src/raddox/TField.prg
     * minor code cleanup

  *  src/raddox/TTable.prg
     ! Fixed moving a MasterSource when refreshing one of their child tables
       ; TODO: Maybe it's requiered to be directly in ::DbGoTop()/::DbGoBottom()

  *  src/wxbase/manwindows/wx_Dialog.cpp
  *  src/wxbase/manwindows/wxhDialog.prg
     + added methods:
       + GetAffirmativeId()
       + GetEscapeId()
       + SetAffirmativeId()
       + SetEscapeId()

2009-10-05 21:16 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  GNUmakefile
  *  demos/dbExplorer/GNUmakefile
  *  samples/arrbrowser/GNUmakefile
  *  samples/dbbrowser/GNUmakefile
     * temporary hack to allow compiling on snow leopard

  *  src/raddox/TField.prg
     * small modification on text for error output

  *  src/wxbase/controls/wx_ComboBox.cpp
     ! Fixed stupid typo on ::GetSelection(), this fixes selecting text on the
       text area

2009-10-03 11:14 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * demos/dbExplorer/dbExplorer.prg
    ! Fixed updating the controls on wxBrowse:OnSelect()
